--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "web-vitals": "^1.0.1",
 
         "anix": "^1.3.6",
-        "jquery": "^3.6.0",
+        "@types/jquery": "3.5.7",
         "particles-bg": "^2.5.5",
         "react-ga": "^3.3.0",
         "react-reveal": "^1.2.2",
